# SumJenkins

./: CMakeLists.txt  Jenkinsfile  README.md
header/: calc.h
src/: calc.cpp  main.cpp
test/: main.cpp  testCalc.cpp
